--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,6 +21,7 @@ pipeline {
         stage('Build the Code') {
             steps {
                 sh script: "mvn ${params.GOAL}"
+                stash name: 'spc-build-jar', includes: 'target/*.jar'
             }
         }
         stage('reporting') {
@@ -28,6 +29,14 @@ pipeline {
                 junit testResults: 'target/surefire-reports/*.xml'
             }
 
+        }
+        stage('deployment') {
+            agent { label 'JDK8' }
+            steps {
+                unstash name: 'spc-build-jar'
+                echo "clone the latest playbook"
+                sh 'ansible --version'
+            }
         }
     }
     post {
