--- a/deployment-services-pod.yaml
+++ b/deployment-services-pod.yaml
@@ -18,7 +18,7 @@ spc:
         version: latest
     spec:
       containers:
-        - image: spc
+        - image: manojbalaraju/spc
           name: spc-deployment
       ports:
         - containerPort: 80
