--- a/deployment-services-pod.yaml
+++ b/deployment-services-pod.yaml
@@ -20,6 +20,7 @@ spc:
       containers:
         - image: manojbalaraju/spc
           name: spc-deployment
+          imagePullPolicy: IfNotPresent
       ports:
         - containerPort: 8080
 
